--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello world
+<h2>Memory Game </h2>
+
+<div>Here is line 1</div>
+<div>Here is line 2</div>
+
+<style>
+.memory_box{
+  background-color:orange; width: 200px; height: 200px;
+}
+</style>
+
+<table>
+  <tr>
+    <td>
+      <div class="memory_box" id="box_0"></div>
+    </td>
+    <td>
+      <div class="memory_box" id="box_1"></div>
+    </td>
+    <td>
+      <div class="memory_box" id="box_2"></div>
+    </td>
+    <td>
+      <div class="memory_box" id="box_3"></div>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <div class="memory_box" id="box_4"></div>
+    </td>
+    <td>
+      <div class="memory_box" id="box_5"></div>
+    </td>
+    <td>
+      <div class="memory_box" id="box_6"></div>
+    </td>
+    <td>
+      <div class="memory_box" id="box_7"></div>
+    </td>
+  </tr>
+</table>
+
+    </td>
+  </tr>
+</table>
+
+<script>
+  /*
+  howdy = "hello world";
+alert(howdy)
+  */
+
+</script>
